@@ -18,6 +18,17 @@ class GeoNamesJsonProvider(object):
     """
     def __init__(self, context):
         self.context = context
+        self._username = None 
+ 
+    @property 
+    def username(self): 
+        """ Geonames username 
+        """ 
+        if self._username is None: 
+            ptool = getToolByName(self.context, 'portal_properties') 
+            gtool = getattr(ptool, 'geographical_properties', None) 
+            self._username = getattr(gtool, 'geonames_key', '') 
+        return self._username 
 
     def groups(self, **kwargs):
         """ Groups
@@ -62,6 +73,7 @@ class GeoNamesJsonProvider(object):
               ', '.join((country.title for country in countries(term.value)))
 
             json['features'].append(feature)
+
         return json
 
     def biogroups(self, **kwargs):
@@ -116,6 +128,7 @@ class GeoNamesJsonProvider(object):
             feature['properties']['center'] = [latitude, longitude]
 
             json['features'].append(feature)
+
         return json
 
     def countries(self, **kwargs):
@@ -180,6 +193,7 @@ class GeoNamesJsonProvider(object):
 
         query = kwargs.copy()
         query.setdefault('lang', 'en')
+        query.setdefault('username', self.username) 
 
         query = urllib.urlencode(query, doseq=1)
         try:
@@ -196,7 +210,7 @@ class GeoNamesJsonProvider(object):
             logger.exception(err)
             return template
 
-        json.sort(key=operator.itemgetter('name'))
+        #json.sort(key=operator.itemgetter('name'))
 
         for item in json:
             feature = {
@@ -226,8 +240,12 @@ class GeoNamesJsonProvider(object):
                 item.get('lat'), item.get('lng')]
 
             feature['properties']['name'] = str(item.get('geonameId'))
+
             feature['properties']['title'] = item.get('name')
-            feature['properties']['tags'] = item.get('fclName')
+            feature['properties']['description'] = ', '.join(x 
+                for x in (item.get('adminName1'), item.get('countryName')) if x) 
+ 
+            feature['properties']['tags'] = item.get('fcodeName') 
             feature['properties']['country'] = item.get('countryCode')
             feature['properties']['adminCode1'] = item.get('adminCode1')
             feature['properties']['adminName1'] = item.get('adminName1')
